<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="145dp"
        app:srcCompat="@drawable/guni_pink_logo"
        android:contentDescription="@string/img"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/txt_size"
                android:layout_marginTop="@dimen/margin_top"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/edittext1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/e1"
                android:inputType="text"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintStart_toEndOf="@id/textview1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview1"
                />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textSize="@dimen/txt_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textview1"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/edittext2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/e2"
                android:autofillHints="phone"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintStart_toEndOf="@id/textview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview2"
                />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="@dimen/txt_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview2"
                />
            <EditText
                android:id="@+id/edittext3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="city"
                android:hint="@string/e3"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/edittext2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview3"
                />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="@dimen/txt_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview3"
                />

            <EditText
                android:id="@+id/edittext4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/e4"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@id/edittext3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview4"
                />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="@dimen/txt_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview4"
                />
            <EditText
                android:id="@+id/edittext5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/e5"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/edittext4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview5"
                />

            <TextView
                android:id="@+id/textview6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confm_pass"
                android:textSize="@dimen/txt_size"
                android:layout_marginTop="@dimen/margin_top"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview5"
                />
            <EditText
                android:id="@+id/edittext6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/e6"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/edittext5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/textview6"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/textview6"
                />
            <!-- when bgcolor added, shape of the button changes-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="30dp"
        android:layout_marginTop="-25dp">
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            style="@style/MyButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/textview7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/acc"
        android:textSize="15sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_top"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardview"
        app:layout_constraintStart_toStartOf="@id/cardview"
        />



    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#C11C84"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="#FFFFF"
        app:layout_constraintStart_toEndOf="@id/textview7"
        app:layout_constraintTop_toBottomOf="@id/cardview"
        app:layout_constraintBaseline_toBaselineOf="@id/textview7"
        />

</androidx.constraintlayout.widget.ConstraintLayout>